--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,9 @@
 set -g mouse on  # Enable mouse support
 set -g history-limit 10000  # Increase scrollback history
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-environment -g XDG_CONFIG_HOME "/Users/ryan/.config"
+set-environment -g XDG_CONFIG_HOME "/Users/ryan.charles/.config"
 set-option -g default-shell "/opt/homebrew/bin/nu"
-set-option -g default-command "env XDG_CONFIG_HOME=/Users/ryan/.config /opt/homebrew/bin/nu --login"
+set-option -g default-command "env XDG_CONFIG_HOME=/Users/ryan.charles/.config /opt/homebrew/bin/nu --login"
 set-option -g default-command "/opt/homebrew/bin/nu --login"
 
 # Unbind the default prefix
@@ -86,7 +86,7 @@ bind-key Right swap-window -t +1 \; select-window -t +1
 # enable passthrough mode for the terminal
 # necessary for images in wezterm and iterm2
 set -g allow-passthrough on
-set-option -g default-terminal "wezterm"
+# set-option -g default-terminal "wezterm"
 
 # Use vi mode for copy mode
 set-window-option -g mode-keys vi
