--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,12 @@ set-option -g default-shell "/opt/homebrew/bin/nu"
 set-option -g default-command "env XDG_CONFIG_HOME=/Users/ryan.charles/.config /opt/homebrew/bin/nu --login"
 set-option -g default-command "/opt/homebrew/bin/nu --login"
 
-# Unbind the default prefix
-unbind C-b
-# Set Ctrl + a as the new prefix
-set-option -g prefix C-a
-# Bind the new prefix key
-bind C-a send-prefix
+# # Unbind the default prefix
+# unbind C-b
+# # Set Ctrl + a as the new prefix
+# set-option -g prefix C-a
+# # Bind the new prefix key
+# bind C-a send-prefix
 
 # set catpuccin settings before loading the plugin
 # meanings: #T: computer name, #W: window name
@@ -43,7 +43,8 @@ set -g pane-active-border-style 'fg=green,bg=default' # Green for active pane
 
 # Set active/inactive window styles
 set -g window-style 'fg=default,bg=default' # Default window style
-set -g window-active-style 'fg=default,bg=#0e0e0e' # Active window style
+# set -g window-active-style 'fg=default,bg=#0e0e0e' # Active window style
+set -g window-active-style 'fg=default,bg=default' # Active window style
 
 # For full borders (instead of just lines), use these options:
 set -g pane-border-lines heavy    # or 'heavy', 'simple', 'number'
